@@ -1,19 +1,9 @@
-Web-Library-*
+/Web-Library-*
+/.build
+!META.json
 *.swp
 *.un~
-build/
-.build/
-INC.SKIP
-PTAGS.SKIP
-cover_db/
-nytprof.*
-nytprof
-00_dbsetup.t
+/cover_db
+/nytprof*
 .DS_Store
-tags
-MYMETA.json
-MYMETA.yml
-Makefile
-blib
-pm_to_blib
 perltidy.LOG
