@@ -1,0 +1,3 @@
+use 5.014000;
+use Module::Build::Tiny 0.025;
+Build_PL();
