@@ -1,15 +1,0 @@
-Changes
-lib/Web/Library.pm
-lib/Web/Library/Item.pm
-lib/Web/Library/Provider.pm
-lib/Web/Library/SimpleAssets.pm
-lib/Web/Library/Test.pm
-Makefile.PL
-MANIFEST			This list of files
-MANIFEST.SKIP
-README.md
-t/item.t
-t/lib/Web/Library/Bar.pm
-t/lib/Web/Library/Foo.pm
-t/library.t
-t/simple_assets.t
