@@ -2,7 +2,7 @@ package Web::Library;
 use MooseX::Singleton;
 use Params::Validate qw(:all);
 use Web::Library::Item;
-our $VERSION = '0.02';
+our $VERSION = '0.03';
 has 'libraries' => (
     traits  => ['Array'],
     is      => 'ro',
