@@ -1,6 +1,5 @@
 package Web::Library::Foo;
 use Moose;
-our $VERSION = '0.01';
 sub get_dir_for { "/foo-path/to/$_[1]" }
 
 sub css_assets_for {
