@@ -1,5 +1,10 @@
 Revision history for Perl extension Web-Library
 
+{{$NEXT}}
+    [Improvements]
+        - Converted the distribution to use Dist::Milla
+        - library_ok(): also output version number
+
 0.02 Fri May 17 08:47:31 2013 CEST
     [New Features]
         - Added Web::Library::Test testing helpers
